--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     color: white;
 }
 
-#userLogin, #adminLogin {
+#userLogin, #userSignup, #adminLogin {
     background: rgba(255, 255, 255, 0.2);
     padding: 20px;
     border-radius: 10px;
